# nginx-flask-fastapi

./: .dockerignore  .env  .pre-commit-config.yaml  compose.yaml
backend/: pyproject.toml
backend/application/: main.py
backend/application/api/: deps.py  main.py
backend/application/api/routes/: info.py
backend/application/connections/: __init__.py  asyncioapiclients.py  asyncioredis.py
backend/application/core/: config.py
backend/application/models/: __init__.py  response_models.py  tags.py
backend/application/utils/: __init__.py  tools.py
compose_partials/: backend-service.yaml  flask-dash-service.yaml  nginx-service.yaml  redis-service.yaml
config/: api_clients_endpoint.json
frontend/: pyproject.toml
frontend/application/: main.py
frontend/application/api/: main_dash.py  main_flask.py
frontend/application/auth/: __init__.py  users.py
frontend/application/connections/: __init__.py  api_client_manager.py  clients.py  sync_api_client.py
frontend/application/core/: __init__.py  cache_config.py  flask_config.py
frontend/application/forms/: __init__.py  login_form.py  register_form.py
static/css/: base_styles.css  bg_border_text_font_style.css  tables.css
static/js/: dark_light_mode_switch.js
templates/core/: base.jinja2
templates/home/: index.jinja2  login.jinja2
templates/partials/: bisol_search.jinja2  footer.jinja2  header.jinja2  offcanvas.jinja2  spinner.jinja2  spinner_data_loading.jinja2
templates/partials/js/: imports.jinja2  (+1 more)
templates/prilogaa/: details_priloga_a.jinja2  index.jinja2
templates/shared/: form_field.jinja2
(+18 files in other folders)
