[project]
name = "application"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
    "redis>=5.2.1",
    "httpx>=0.27.2",
    "asyncer>=0.0.8",
    "pandas>=2.2.3",
    "cryptography>=44.0.2",
    "asyncmy>=0.2.10",
    "celery>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]
